--- a/02. frontend/src/app/erp/pages/erp-landing/erp-landing.component.scss
+++ b/02. frontend/src/app/erp/pages/erp-landing/erp-landing.component.scss
@@ -7,6 +7,8 @@ $bg-light: #f9f9f9;
 
 :host {
   display: block;
+  overflow-y: auto;
+  height: auto;
 }
 
 .landing {
